date issue fixed

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-validator": "^4.3.0",
     "handlebars": "^4.0.11",
     "jsonwebtoken": "^8.2.1",
+    "moment": "^2.22.1",
     "mongoose": "^4.13.12",
     "mongoose-unique-validator": "^1.0.6",
     "morgan": "1.8",
