--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 PORT=3000
-MONGO_HOST=mongodb://mean_dev:hadi9292@ds249079.mlab.com:49079/mean-chat-app
+MONGO_HOST= mongodb://quote-app-db:Devel0per@ds111430.mlab.com:11430/quote-app-db
 SECRET=supersecretalltheway
 DEBUG_COLORS=true
